  now consistent (rather than being compiler-dependent), including
  new modulo(), remainder(), and floordiv() functions. The mod()
  function is now an alias for remainder(), which is closest to
  the old mod() on most platforms; if you want it to be an alias
  for modulo() instead, change it in alias.conf

- Added nattr(), which counts the number of attributes on an object.

- sees() can now evaluate the visibility of exits as well as things.
  Also, a small bug has been fixed: the see_owned_dark calculation in
  sees() now uses the object doing the looking, not the player invoking
  the function.

- Added session(), which returns command count, bytes of input, and
  bytes of output associated with a port.

- Added speak(), which formats speech strings and can parse and transform
  them.

- Added store(), which is basically to setx() what setr() is to setq().

- The new structure functions read() and write() allow the use of an
  "invisible" delimiter, which permits data to be stored in delimited
  lists without worrying about user-provided data containing the
  delimiter character. The delimit() function processes a stored
  list, substituting a separator string for a delimiter.

- Added table(), tables(), rtables(), and ctables() functions. table()
  is based on an idea from PennMUSH, formatting text within a table of
  equally wide columns. The other three functions format text within
  a table of variably-wide columns (left/right/center-justified), with
  left and right-margin borders.

- Added timefmt() function. This is essentially an interface to the C
  library function strftime(), allowing the time to be formatted in
  psuedo-arbitrary ways. Based on an idea from PennMUSH.

- translate() now handles tabs.

- trim() now handles multi-character trim strings.

- Added sind(), cosd(), tand(), asind(), acosd(), atand() degree-based
  trigonometry functions.

- Added until() function, which is similar to while(), except it operates