@@ -5448,12 +5448,12 @@ See also: @link, @open.
  
 	case()		config()	convsecs()	convtime()	
 	die()		hasmodule()	helptext()	ifelse()
-	localize()	mudname()	nonzero()	pemit()		
-	r()		rand()		remit()		restarts()	
-	restarttime()	s()		secs()		setq()		
-	setr()		speak()		sql()		starttime()	
-	subeval()	switch()	switchall()	time()		
-	timefmt()	version()
+	localize()	mudname()	nonzero()	oemit()
+	pemit()		r()		rand()		remit()		
+	restarts()	restarttime()	s()		secs()		
+	setq()		setr()		speak()		sql()		
+	starttime()	subeval()	switch()	switchall()	
+	time()		timefmt()	version()
  
 & STRING FUNCTIONS
   Topic: String Functions
@@ -10236,12 +10236,23 @@ performed and the walk down the list stops.
  
   See also: x(), setx(), store(), lvars().
  
+& OEMIT()
+  Function:  oemit(<target>, <string>)
+ 
+  This side-effect function sends a message to everyone in <target>'s
+  location with the exception of <target>, just as if the command
+  '@oemit <target> = <string>' had been invoked.
+ 
+  See also: pemit(), remit().
+ 
 & PEMIT()
   Function:  pemit(<list of dbrefs>,<string>)
  
   This side-effect function sends a message to the list of dbrefs, just
   as if the command '@pemit/list <list of dbrefs>=<string>' had been
   invoked.
+ 
+  See also: oemit(), remit().
  
 & SQL()
   Function:  sql(<SQL statement>[, <delim>][, <field delim>])
@@ -10334,6 +10345,8 @@ performed and the walk down the list stops.
  
   The function takes its name from the '@remit' command, which is an
   alias for '@pemit/contents'.
+ 
+  See also: pemit(), oemit().
  
 & SQUISH()
   Function:  squish(<string>[,<character>])
@@ -14333,6 +14346,8 @@ Continued in 'help 3.1 functions6'.
  
 & 3.1 functions6
  
+- Added oemit(), which is the function equivalent of @oemit.
+ 
 - Added nattr(), which counts the number of attributes on an object.
  
 - sees() can now evaluate the visibility of exits as well as things.
@@ -14347,15 +14362,15 @@ Continued in 'help 3.1 functions6'.
  
 - Added store(), which is basically to setx() what setr() is to setq().
  
+Continued in 'help 3.1 functions7'.
+ 
+& 3.1 functions7
+ 
 - The new structure functions read() and write() allow the use of an
   "invisible" delimiter, which permits data to be stored in delimited
   lists without worrying about user-provided data containing the
   delimiter character. The delimit() function processes a stored
   list, substituting a separator string for a delimiter.
- 
-Continued in 'help 3.1 functions7'.
- 
-& 3.1 functions7
  
 - Added table(), tables(), rtables(), and ctables() functions. table()
   is based on an idea from PennMUSH, formatting text within a table of
@@ -14369,14 +14384,14 @@ Continued in 'help 3.1 functions7'.
  
 - translate() now handles tabs.
  
+Continued in 'help 3.1 functions8'.
+ 
+& 3.1 functions8
+ 
 - trim() now handles multi-character trim strings.
  
 - Added sind(), cosd(), tand(), asind(), acosd(), atand() degree-based
   trigonometry functions.
- 
-Continued in 'help 3.1 functions8'.
- 
-& 3.1 functions8
  
 - Added until() function, which is similar to while(), except it operates
   on multiple lists and terminates on a regular expression condition.
