@@ -412,6 +412,8 @@ CHANGES TO FUNCTIONS
 
 - Added nattr(), which counts the number of attributes on an object.
 
+- Added oemit(), which is the function equivalent of @oemit.
+
 - sees() can now evaluate the visibility of exits as well as things.
   Also, a small bug has been fixed: the see_owned_dark calculation in
   sees() now uses the object doing the looking, not the player invoking
